feat: implement business logic services