@@ -1,12 +1,16 @@
 package com.vinicios.library.services;
 
+import com.vinicios.library.dtos.BookCreateDTO;
+import com.vinicios.library.dtos.BookResponseDTO;
 import com.vinicios.library.entities.Book;
+import com.vinicios.library.mappers.BookMapper;
 import com.vinicios.library.repositories.BookRepository;
+import com.vinicios.library.services.exceptions.ResourceNotFoundException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class BookService {
@@ -14,36 +18,41 @@ public class BookService {
     @Autowired
     private BookRepository bookRepository;
 
-    public List<Book> getAllBooks() {
-        return bookRepository.findAll();
+    public BookResponseDTO createBook(BookCreateDTO dto) {
+        Book book = BookMapper.toEntity(dto);
+        Book saved = bookRepository.save(book);
+        return BookMapper.toResponseDTO(saved);
     }
 
-    public Optional<Book> getBookById(Long id) {
-        return bookRepository.findById(id);
+    public List<BookResponseDTO> getAllBooks() {
+        return bookRepository.findAll()
+                .stream()
+                .map(BookMapper::toResponseDTO)
+                .collect(Collectors.toList());
     }
 
-    public Book createBook(Book book) {
-        return bookRepository.save(book);
+    public BookResponseDTO getBookById(Long id) {
+        Book book = bookRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Livro não encontrado"));
+        return BookMapper.toResponseDTO(book);
     }
 
-    public Optional<Book> updateBook(Long id, Book bookDetails) {
-        return bookRepository.findById(id).map(existingBook -> {
-            if (bookDetails.getTitle() != null) {
-                existingBook.setTitle(bookDetails.getTitle());
-            }
-            if (bookDetails.getAuthor() != null) {
-                existingBook.setAuthor(bookDetails.getAuthor());
-            }
-            if (bookDetails.getIsbn() != null) {
-                existingBook.setIsbn(bookDetails.getIsbn());
-            }
-            existingBook.setAvailable(bookDetails.isAvailable());
-            return bookRepository.save(existingBook);
-        });
+    public BookResponseDTO updateBook(Long id, BookCreateDTO dto) {
+        Book book = bookRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Livro não encontrado"));
+        book.setTitle(dto.getTitle());
+        book.setAuthor(dto.getAuthor());
+        book.setIsbn(dto.getIsbn());
+        Book updated = bookRepository.save(book);
+        return BookMapper.toResponseDTO(updated);
     }
 
     public void deleteBook(Long id) {
-        bookRepository.deleteById(id);
+        bookRepository.findById(id)
+                .ifPresentOrElse(
+                        bookRepository::delete,
+                        () -> { throw new ResourceNotFoundException("Livro não encontrado"); }
+                );
     }
 
     public boolean bookExists(Long id) {
@@ -54,27 +63,30 @@ public class BookService {
         return bookRepository.count();
     }
 
-    public List<Book> getAvailableBooks() {
-        return bookRepository.findAll().stream()
-                .filter(Book::isAvailable)
-                .toList();
+    public List<BookResponseDTO> getAvailableBooks() {
+        return bookRepository.findByAvailableTrue()
+                .stream()
+                .map(BookMapper::toResponseDTO)
+                .collect(Collectors.toList());
     }
 
-    public List<Book> getBooksByAuthor(String author) {
-        return bookRepository.findAll().stream()
-                .filter(book -> author.equalsIgnoreCase(book.getAuthor()))
-                .toList();
+    public List<BookResponseDTO> getBooksByAuthor(String author) {
+        return bookRepository.findByAuthorIgnoreCase(author)
+                .stream()
+                .map(BookMapper::toResponseDTO)
+                .collect(Collectors.toList());
     }
 
-    public List<Book> getBooksByTitle(String title) {
-        return bookRepository.findAll().stream()
-                .filter(book -> book.getTitle().toLowerCase().contains(title.toLowerCase()))
-                .toList();
+    public List<BookResponseDTO> getBooksByTitle(String title) {
+        return bookRepository.findByTitleContainingIgnoreCase(title)
+                .stream()
+                .map(BookMapper::toResponseDTO)
+                .collect(Collectors.toList());
     }
 
-    public Optional<Book> getBookByIsbn(String isbn) {
-        return bookRepository.findAll().stream()
-                .filter(book -> isbn.equals(book.getIsbn()))
-                .findFirst();
+    public BookResponseDTO getBookByIsbn(String isbn) {
+        Book book = bookRepository.findByIsbn(isbn)
+                .orElseThrow(() -> new ResourceNotFoundException("Livro não encontrado"));
+        return BookMapper.toResponseDTO(book);
     }
 }
